...
  'client_register_wizard.bureau_dupont_sprl': 'Dupont Office Ltd',
  'client_register_wizard.choisissez_un_mot_de_passe': 'Choose a password',
  'client_register_wizard.conditions_d_utilisation': 'Terms of use',
  'client_register_wizard.derniere_etape': 'Last step',
  'client_register_wizard.etape_precedente': 'Previous step',
  'client_register_wizard.jean_dupont': 'John Smith',
  'client_register_wizard.mot_de_passe': 'Password',
  'client_register_wizard.nom_complet': 'Full name',
  'client_register_wizard.politique_de_confidentialite': 'Privacy policy',
  'client_register_wizard.raison_sociale': 'Company name',
  'client_register_wizard.telephone_optionnel': 'Phone (optional)',
  'client_register_wizard.votre_adresse_email': 'Your email address',
  'client_register_wizard.votre_societe': 'Your company',
...
