appId: com.brio.provider
---
- launchApp
- tapOn: "Profile"
- assertVisible: "Profil"
- assertVisible: "Disponibilités"
- assertVisible: "Badges"
- assertVisible: "Vérification KYC"
